--- a/src/templates/applications.html
+++ b/src/templates/applications.html
@@ -56,6 +56,11 @@
                             <input type="text" id="item_id" name="item_id" class="form-control" required>
                         </div>
                         <br>
+                        <div class="form-group">
+                            <label for="item_id" style="color: aquamarine;"><b>Put count items</b></label>
+                            <input type="text" id="value" name="value" class="form-control" required>
+                        </div>
+                        <br>
                         <div class="container text-center">
                         <button type="submit" style=" --bs-btn-padding-y: 0.4rem; --bs-btn-padding-x: 6rem; --bs-btn-font-size: 1rem;
                       color: aquamarine; border: 3px solid aquamarine; font-family:'Archivo Black';" class="btn btn-dark">
