--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -23,6 +23,7 @@
                 <th class="main_text" style="color: aquamarine" scope="col"><h3>Name</h3></th>
                 <th class="main_text" style="color: aquamarine" scope="col"><h3>Status</h3></th>
                 <th class="main_text" style="color: aquamarine" scope="col"><h3>Item</h3></th>
+                <th class="main_text" style="color: aquamarine" scope="col"><h3>Count</h3></th>
 
             </tr>
           </thead>
@@ -33,6 +34,7 @@
                     <td>{{ app.name }}</td>
                     <td>{{ app.status }}</td>
                     <td>{{ app.item_id }}</td>
+                    <td>{{ app.count }}</td>
             </tr>
           {% endfor %}
           </tbody>
