--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,7 +24,7 @@
       <div class="row align-items-start">
           <div class="row gy-4">
               <h1 style="font-size: 70px" class="main_text">
-                  Applications
+                  Sport inventory app
               </h1>
           </div>
       </div>
