--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -63,6 +63,19 @@
   </div>
 </div>
 
+<div class="container-fluid text-center">
+  <div class="row text-justify-center">
+      <div class="col-md-6 offset-md-3">
+          <br>
+          <div class="d-grid gap-2">
+              <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
+                font-family: 'Archivo Black';" href="/admin/get_logs" role="button">get report</a>
+          </div>
+      </div>
+  </div>
+</div>
+
+
 
   <script src="../static/script_for_flash.js"></script>
 {% endblock %}
