--- a/src/templates/buy.html
+++ b/src/templates/buy.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy list</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
         body {
-            background-color: #121212; /* Темный фон */
+            background-color: #2f2f2f ; /* Темный фон */
             color: #ffffff; /* Белый текст */
         }
         .table {
@@ -15,7 +19,7 @@
         }
         .table th {
             background-color: #212529; /* Темный фон заголовков таблицы */
-            color: #ffffff; /* Белый текст заголовков */
+            color: gray; /* Белый текст заголовков */
         }
         .form-control {
             background-color: #2a2a2a; /* Темный фон полей ввода */
@@ -80,10 +84,10 @@
             <tbody>
                 {% for task in tasks %}
                 <tr>
-                    <td style="color: white">{{ task.name }}</td>
-                    <td style="color: white">{{ task.quantity }}</td>
-                    <td style="color: white">{{ task.price }}</td>
-                    <td style="color: white">{{ task.supplier }}</td>
+                    <td style="color: black">{{ task.name }}</td>
+                    <td style="color: black">{{ task.quantity }}</td>
+                    <td style="color: black">{{ task.price }}</td>
+                    <td style="color: black">{{ task.supplier }}</td>
                     <td>
                         <button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#editModal{{ task.id }}">
                                                         Изменить
@@ -150,6 +154,10 @@
     {% endfor %}
         </div>
     </div>
+</div>
+
+          <div style="position: absolute; top: 10px; left: 10px;">
+    <button onclick="window.history.back();" class="btn btn-dark btn-sm" style="color: aquamarine; border: 3px solid aquamarine; font-family: 'Archivo Black';">Back</button>
 </div>
 
     <script src="../static/script_for_flash.js"></script>
