--- a/src/templates/get_user_applet.html
+++ b/src/templates/get_user_applet.html
@@ -40,6 +40,7 @@
                     <td
                         {% if app.status == 'not accepted' %}style="color: red;"
                         {% elif app.status == 'accepted' %}style="color: lime;"
+                        {% elif app.status == 'return' %}style="color: cornflowerblue;"
                         {% endif %}>
                         <a style="color: inherit; text-decoration: none;">
                             {{ app.status }}
