--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,59 +2,69 @@
 
 {% block content %}
 
-    <div class="container-fluid mt-4 text-end">
-        <div class="row justify-content-end gx-3">
+<div class="container-fluid mt-4 text-end">
+    <div class="row justify-content-end gx-3">
 
-            <div class="col-auto">
-                <h4 >{{ username }}</h4>
-            </div>
+        <div class="col-auto">
+            <h4>{{ username }}</h4>
+        </div>
 
-            <div class="col-auto">
+        <div class="col-auto">
             <a href="/logout" style="color: aquamarine;border: 3px solid aquamarine;font-family:'Archivo Black';"
                role="button" class="btn btn-sm btn-dark logoutbtn">
                 <div class="main_text">
                     Logout
                 </div>
-                </a>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid text-center">
+    <div class="row align-items-start">
+        <div class="row gy-4">
+            <h1 style="font-size: 70px" class="main_text">
+                Sport inventory app
+            </h1>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid text-center">
+    <div class="row text-justify-center">
+        <div class="col-md-6 offset-md-3">
+            <br>
+            <div class="d-grid gap-2">
+                <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
+                    font-family: 'Archivo Black';" href="/applications" role="button">make application</a>
             </div>
         </div>
     </div>
-
-<div class="container-fluid text-center">
-      <div class="row align-items-start">
-          <div class="row gy-4">
-              <h1 style="font-size: 70px" class="main_text">
-                  Sport inventory app
-              </h1>
-          </div>
-      </div>
-  </div>
-
-<div class="container-fluid text-center">
-  <div class="row text-justify-center">
-      <div class="col-md-6 offset-md-3">
-          <br>
-          <div class="d-grid gap-2">
-              <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="/applications" role="button">make application</a>
-          </div>
-
-      </div>
-  </div>
 </div>
 
 <div class="container-fluid text-center">
-  <div class="row text-justify-center">
-      <div class="col-md-6 offset-md-3">
-          <br>
-          <div class="d-grid gap-2">
-              <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
-                font-family: 'Archivo Black';" href="{{ url_for('account', username=name) }}" role="button">my application</a>
-          </div>
-
-      </div>
-  </div>
+    <div class="row text-justify-center">
+        <div class="col-md-6 offset-md-3">
+            <br>
+            <div class="d-grid gap-2">
+                <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
+                    font-family: 'Archivo Black';" href="{{ url_for('account', username=name) }}" role="button">my application</a>
+            </div>
+        </div>
+    </div>
 </div>
 
-  <script src="../static/script_for_flash.js"></script>
+<div class="container-fluid text-center">
+    <div class="row text-justify-center">
+        <div class="col-md-6 offset-md-3">
+            <br>
+            <div class="d-grid gap-2">
+                <a class="btn btn-dark" style="color: aquamarine; border: 3px solid aquamarine;
+                    font-family: 'Archivo Black';" href="{{ url_for('my_inventory') }}" role="button">my inventory</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="../static/script_for_flash.js"></script>
 {% endblock %}
